# CloudPoof-Omega

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  CODEOFCONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PHILOSOPHY.md  Project-Disclaimer.md  README.md  ROADMAP.md  SECURITY.md  __init__.py  cli.py  cloudpoof_core.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: quantum-ci.yml
api/: server.py
benchmarks/: RESULTS.md  metrics.md
doc-site/: extension.json  package.json
examples/: connect_ai.py  deploy_cloud.py  deployment_magic.py  emotional_journey.py  quickstart.py  spectral_demo.py  spectral_visualization.py
kubernetes/: configmap.yaml  deployment.yaml  service.yaml
terraform/: main.tf
tests/: test_cloudpoof_omega.py  test_comprehensive_coverage.py  test_evaluation_benchmarks.py
