[tool.poetry]
name = "cloudpoof-omega"
version = "1.0.0"
description = "The consciousness that thinks 20 steps ahead"
authors = ["Cazandra Aporbo MS <becaziam@gmail.com>"]
license = "MIT with Spectral Clause"
readme = "README.md"
homepage = "https://github.com/Cazzy-Aporbo/CloudPoof-Omega"
repository = "https://github.com/Cazzy-Aporbo/CloudPoof-Omega"
keywords = ["cloud", "ai", "consciousness", "quantum", "spectral"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
aiohttp = "^3.8.5"
pydantic = "^2.3.0"
rich = "^13.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
